--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="kr.hs.emirim.young24.monpizza.MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/name"
         android:text="Hello World!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
 </RelativeLayout>
