--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -11,6 +11,7 @@
     tools:context="kr.hs.emirim.young24.monpizza.ResultActivity">
 
     <TextView
+        android:id="@+id/result"
         android:text="Second World!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
